apps/media/seerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/app: seerr-chart
    gethomepage.dev/name: Seerr
    gethomepage.dev/description: Media requests
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyseerr.png
    gethomepage.dev/href: https://seerr.${SECRET_DOMAIN}
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`seerr.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: seerr-seerr-chart
          port: 80
      middlewares:
        - name: trusted-only
          namespace: kube-system
